# Python_Install

./: .gitignore  .pre-commit-config.yaml  ANALYSIS.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  category_hints.json  cli.py  completion.ps1  completion.sh  config.py  core.py  core_impl.py  deps.py  dispatch.py  gui.py  i18n.py  icons.py  installer.py  log_panel.py  main.py  menu.py  profiles.py  program_editor.py  programs.json  programs.schema.json  pyproject.toml  registry.py  requirements.txt  scanner.py  state.py  stats.py  tray.py  tree.py  updater.py  (+3 more)
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
i18n/: en.json  ru.json  zh.json
tests/: test_cli_args.py  test_core.py  test_fixes.py
tools/: import_winget.py  scan_software.py
