[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minstall"
# Версия — единый источник правды: config.APP_VERSION (читается статически,
# через AST, без импорта). Не дублируем номер здесь, чтобы он не разъезжался.
dynamic = ["version"]
description = "Мастер тихой установки программ и системных твиков для Windows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Rosa" },
]
keywords = ["installer", "windows", "automation", "deployment", "silent-install"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
]

dependencies = [
    "wxPython>=4.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
minstall = "main:main"

[project.urls]
Homepage = "https://github.com/assassins377/minstall_project"
Repository = "https://github.com/assassins377/minstall_project"
Issues = "https://github.com/assassins377/minstall_project/issues"

# =====================================================================
# Инструменты
# =====================================================================

[tool.setuptools]
py-modules = ["main", "config", "core", "gui", "updater", "state"]

[tool.setuptools.dynamic]
version = { attr = "config.APP_VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Покрытие считаем по логике; GUI-модули (wxPython) юнит-тестами не покрываются
# и требуют дисплея, поэтому исключены. Активируется только при `pytest --cov`.
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "tools/*",
    "gui.py",
    "menu.py",
    "tree.py",
    "icons.py",
    "log_panel.py",
    "dispatch.py",
    "main.py",
]

[tool.coverage.report]
show_missing = true
# Порог-«трещотка»: текущее покрытие ~47%, держим планку чуть ниже, чтобы
# ловить регресс, не требуя новых тестов на потоки/сеть прямо сейчас.
fail_under = 40

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False discouraged
