[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minstall"
# Версия — единый источник правды: config.APP_VERSION (читается статически,
# через AST, без импорта). Не дублируем номер здесь, чтобы он не разъезжался.
dynamic = ["version"]
description = "Universal silent installation wizard for programs and system tweaks — cross-platform Windows & Linux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Rosa" },
]
keywords = ["installer", "windows", "linux", "automation", "deployment", "silent-install", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "wxPython>=4.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
minstall = "main:main"

[project.urls]
Homepage = "https://github.com/assassins377/Python_Install"
Repository = "https://github.com/assassins377/Python_Install"
Issues = "https://github.com/assassins377/Python_Install/issues"

# =====================================================================
# Инструменты
# =====================================================================

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*", "tools*", "docs*", "profiles*", "software*", "icons*", "MInstAll*"]

[tool.setuptools.dynamic]
version = { attr = "config.APP_VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Покрытие считаем по логике; GUI-модули (wxPython) юнит-тестами не покрываются
# и требуют дисплея, поэтому исключены. Активируется только при `pytest --cov`.
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "tools/*",
    "gui.py",
    "menu.py",
    "tree.py",
    "icons.py",
    "log_panel.py",
    "dispatch.py",
    "main.py",
]

[tool.coverage.report]
show_missing = true
# Порог-«трещотка»: текущее покрытие ~47%, держим планку чуть ниже, чтобы
# ловить регресс, не требуя новых тестов на потоки/сеть прямо сейчас.
fail_under = 40

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False discouraged

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/", "tools/", "build/", "dist/"]
